# PyProxyPool

./: .gitignore  PRD_P1P2.md  README.md  cache.py  config.py  database.py  main.py  models.py  overview.md  pyproject.toml  schemas.py  scoring.py  test_quick.py
api/: __init__.py  auth.py  dashboard.py  routes.py  scheduler.py
data/: proxy.db  proxy.db-shm
db/: __init__.py  base.py  mysql_helper.py  redis_helper.py  sqlite_helper.py
deliverables/: PROJECT_P0_COMPLETE.md
docs/: architecture-geoip.md  architecture-refactor.md  class-diagram.mermaid  incremental-prd-geoip.md  sequence-diagram.mermaid
getter/: __init__.py  github_sources.py  proxy_crawler.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py
scripts/: backfill_geoip.py  init_db.py  migrate_sqlite_to_postgres.py  schema_migration.py
services/: __init__.py  exporter.py  geo.py  importer.py  pool.py  risk.py  scanner.py
utils/: __init__.py  ip_geo.py  proxy_parser.py
validator/: __init__.py
